--- a/exo - Copie.html
+++ b/exo - Copie.html
@@ -7,90 +7,6 @@
         <link rel="stylesheet" href="style.css"/>
         <link rel="stylesheet" href="https//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"integrity ="sha512-9usAa10IR00HhonpyAIVpjrylPvoDwiPUiKdWK5t3PyolY1c0d4DSE0Ga+ri4AuTroPR5aQvXU9xC6q0PnzFeg=="crossorigin="anonymous"referrerpolicy="no-referrer==" />
         <style> 
-            /*Styles css pour le portfolio*/
-            body
-        {
-            font-family: Arial ,sans-serif;
-            line-height: 1.6;background-color: #f4f4f4;
-            color: #333;margin: 1;padding: 1;   
-        }
-            .container 
-            {
-                width: 80%;
-                margin: auto;
-                overflow: hidden;
-            }
-            header 
-            {
-                background-color: #333;
-                color: #f4f4f4;;
-                padding: 1em 0;
-                text-align: center;
-            }
-            header a 
-            {
-                color: #fff;
-                text-decoration: none;
-                margin: 0 1em;
-            }
-            section 
-            {
-                padding: 2em 0;
-            }
-            #accueil 
-            {
-                background-color: #fff;
-                border-radius: 20px;
-            }
-            #a-propos
-            {
-                background-color: #f9f9f9;
-                border-radius: 20px;
-            }
-            #compétences
-            {
-                background-color:#fff ;
-                border-radius: 20px ;
-            }
-            #projets
-            {
-                background-color: #fff;
-                border-radius: 20px;
-            }
-            #contact
-            {
-                background-color: #f9f9f9;
-            }
-            footer 
-            {
-                background-color: #333;
-                color: #fff;
-                text-align: center;
-                padding: 1em 0;
-            }
-            /* Styles pour le formulaire*/
-            form
-            {
-                display: flex;
-                flex-direction: column;
-                width: 50%;
-                margin: auto;
-            }
-            input, textarea
-            {
-                padding: 0.5em;
-                margin-bottom: 1em;
-                border: 1px solid #ddd;
-            }
-            button
-            {
-                padding: 0.5em 1em;
-                background-color: #333;
-                color: #fff;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-            }
             
         </style>
         
@@ -101,10 +17,8 @@
                   <h1> KABANGA DANIEL</h1>
                   <p> Portfolio d'apprenti programmeur web </p>
                    <nav>
-                    <a href="#a-propos">A PROPOS</a>
-                    <a href="#compétences">COMPETENCES</a>
-                    <a href="#projets"> PROJETS</a>
-                    <a href="#contact"> CONTACTS</a>
+                    <div class="profile">
+                        <imag src="" alt="">
                    </nav>
                 </div>
             </header>
